[package]
name = "rust_util"
version = "0.6.12"
authors = ["Hatter Jiang <jht5945@gmail.com>"]
edition = "2018"
description = "Hatter's Rust Util"
license = "MIT"
readme = "README.md"

[features]
default = [] #["serde", "serde_json"]
# use_serde = ["serde", "serde_json"]

[dependencies]
libc = "0.2.65"
term = "0.5.2"
term_size = "0.3.1"
lazy_static = "1.3.0"
# serde = { version = "1.0", features = ["derive"], optional = true }
# serde_json = { version = "1.0", optional = true }
