[package]
name = "rust_util"
version = "0.6.29"
authors = ["Hatter Jiang <jht5945@gmail.com>"]
edition = "2018"
description = "Hatter's Rust Util"
license = "MIT"
readme = "README.md"

[features]
default = [] #["serde", "serde_json"]
# use_serde = ["serde", "serde_json"]
use_clap = ["clap"]

[dependencies]
libc = "0.2.82"
term = "0.7.0"
term_size = "0.3.2"
lazy_static = "1.4.0"
clap = { version = "2.0", optional = true }
# serde = { version = "1.0", features = ["derive"], optional = true }
# serde_json = { version = "1.0", optional = true }
