[package]
name = "test_clap"
version = "0.1.0"
authors = ["Hatter Jiang <jht5945@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_util = { version = "0.6", path = "../../", features = ["use_clap"] }
clap = "2.0"
